# dumptool

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp
client/c/: Makefile
client/c/src/: client.c
convert/: convert_json2csv.py  convert_mem_to_flamegraph.py  convert_mspti_timeline.py  convert_pytorch_to_timeline.py
converttool/flamegraph/: convert_bin_to_flamegraph.py  convert_bin_to_flamegraph_final.py  convert_bin_to_flamegraph_final_final.py  convert_bin_to_flamegraph_time.py  convert_to_flamegraph_with_stage.py  gen.py  gene_test_data.py  gentwocall.py  mem_profile.proto  mem_profile_pb2.py  multibranch_test.json  multistage_test.json  newcon.py  test.json
converttool/pytorch/: generate_pytorch_data.py  opti_convert_to_chrome_json.py
converttool/timeline/: timeline.proto
hack/: format.sh
include/: manage.hpp  tracemanage.hpp  util.hpp
include/common/: constant.h  logging.cc  logging.h  macro.h  util.cc  util.h
proto/: dumptool.proto
protos/: CMakeLists.txt  systrace.pb-c.c  systrace.pb-c.h  systrace.pb.cc  systrace.pb.h  systrace.proto
prototest/: convert.py
prototest/flamegraph/: file.proto  file_convert.py  file_pb2.py  gene_file.py
prototest/flamegraph_2.0/: con.py  mem_profile.proto  mem_profile_pb2.py  nngen.py
prototest/timeline/: convert_to_perfetto.py  gene_test.py  gene_timeline_bin.py  timeline.json  timeline_convert.py
prototest/timeline/test/: convert_to_chrome_json.py  convert_to_chrome_json.pybak  generate_timeline_data.py  timeline.json  timeline_pb2.py
prototest/timeline/test2/: convert_to_chrome_json.py  generate_pytorch_data.py  pytorch.proto  pytorch_data.json  pytorch_pb2.py  youhua_convert.py
scripts/: compile_proto.sh  start_server.sh
server/python/src/: server.py
src/: main.cpp  manage.cpp  tracemanage.cpp
src/ascend/: hook.cc  hook.h
src/cann/: cann_hook.c
src/mspti/: CMakeLists.txt  json_file_writer.h  mspti_tracker.cpp  mspti_tracker.hpp
src/trace/: CMakeLists.txt  library_loader.cc  library_loader.h  systrace_manager.cc  systrace_manager.h
src/trace/python/: py_syshook.c  pytorch_tracing.c  pytorch_tracing.h  pytorch_tracing_data.h  pytorch_tracing_loader.cc  pytorch_tracing_loader.h  pytorch_tracing_manager.cc  pytorch_tracing_manager.h  uthash.h
sysTrace/: .clang-format  CMakeLists.txt  build.sh
sysTrace-failslow/: README.md  requirements.txt  setup.py
sysTrace-failslow/config/: config.json  metric_config.json  model_config.json
sysTrace-failslow/docs/: conf_introduction.md
sysTrace-failslow/failslow/: fail_slow_detection.py  main.py  slow_node_detection.py
sysTrace-failslow/failslow/alg/: __init__.py
sysTrace-failslow/failslow/alg/space_comp_detector/: __init__.py  outlier_data_detector.py  sliding_window_dbscan.py
sysTrace-failslow/failslow/alg/time_comp_detector/: __init__.py  sliding_window_n_sigma_detector.py  ts_dbscan_detector.py
sysTrace-failslow/failslow/alg/time_comp_detector/time_alg/: sliding_window_nsigma.py
sysTrace-failslow/failslow/dataloader/: __init__.py  marker_data_reader.py  restore_comm.py
sysTrace-failslow/failslow/process/: __init__.py  convert_json2csv.py  convert_mspti_timeline.py  post_process.py  suppression.py
sysTrace-failslow/failslow/response/: __init__.py  response.py
sysTrace-failslow/failslow/tests/: __init__.py  comm_slow.py  fft.py  kmeans_cluster.py  tmp.py
sysTrace-failslow/failslow/util/: constant.py  logging_config.py  logging_utils.py  utils.py
sysTrace-failslow/service/: systrace-failslow.service
sysTrace/convert/: convert_mem_to_flamegraph.py  convert_pytorch_to_timeline.py
sysTrace/include/common/: constant.h  logging.h  shared_constants.h  util.h
sysTrace/protos/: CMakeLists.txt  systrace.proto
sysTrace/src/ascend/: hook.cc
sysTrace/src/cann/: cann_hook.c
sysTrace/src/mspti/: json_file_writer.h  mspti_tracker.hpp
sysTrace/src/trace/: library_loader.cc  systrace_manager.cc  systrace_manager.h
sysTrace/src/trace/python/: pytorch_tracing.c  pytorch_tracing_data.h  pytorch_tracing_loader.h  pytorch_tracing_manager.cc  pytorch_tracing_manager.h
sysTrace/watchdog/: watchdog.py
test3/: convery.py  generate_test_data.py  trace.json  trace.pb  trace.pb-c.c  trace.pb-c.h  trace.pb.cc  trace.pb.h  trace.proto  trace_pb2.py
